--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,21 +16,25 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build_and_release:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout code
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # Build and test
+      - name: Build and test
+      - uses: actions/build-and-test@v1.0.0
+      
+      # Create release
+      - name: Create release
+      - uses: actions/create-release@v1.0.0
+        with:
+          tag_name: v1.0
+          release_name: Release v1.0
+      
+      
