--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build_and_release:
     # The type of runner that the job will run on
+    name: Build and Release
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -33,8 +34,6 @@ jobs:
       # Create release
       - name: Create release
       - uses: actions/create-release@v1.0.0
-        with:
-          tag_name: v1.0
-          release_name: Release v1.0
+
       
       
