--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,22 +15,9 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build-and-release:
-    # The type of runner that the job will run on
+  update-readme-with-blog:
+    name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout code
-      - uses: actions/checkout@v3
-
-      # Build and test
-      - name: Build and test
-      - uses: actions/build-and-test@v1.0.0
-      
-
-
-      
-      
+      - uses: actions/checkout@v2
