--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,9 +15,15 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  update-readme-with-blog:
-    name: Update this repo's README with latest blog posts
+  build-with-release:
+    name: Build and Release
     runs-on: ubuntu-latest
     
     steps:
+      - name: checkout
       - uses: actions/checkout@v2
+      
+      - name: Build and test
+      - uses: actions/build-and-test@v2
+      
+      
