--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,10 +20,17 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: checkout
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --no-restore
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
       
-      - name: Build and test
-      - uses: actions/build-and-test@v2
       
       
