--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,16 +21,17 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+    - name: Setup Node
+      uses: actions/setup-node@v1
       with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+        node-version: '10.x'
+    - name: npm install, build and test
+      run: |
+        npm install
+        npm run build --if-present
+        npm test
+        
+
       
       
       
