--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,7 @@ jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Checkout code
         uses: actions/checkout@master
