--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           tag_name: v1.1
           release_name: Releasev1.1
+          myToken: ${{ secrets.GITHUB_TOKEN }}
 
 
         
