--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,9 +26,9 @@ jobs:
         id: create_release
         uses: actions/create-release@latest
         with:
-          tag_name: v1.1
+          tag_name: ${{ secrets.GITHUB_TOKEN }}
           release_name: Releasev1.1
-          myToken: ${{ secrets.GITHUB_TOKEN }}
+  
 
 
         
