--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{secrets.STABLEVERSION}}
+          tag_name: ${{variables.STABLEVERSION}}
           release_name: Releasev1.2
           body: |
             Changes in this Release
