--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{vars.STABLEVERSION}}
-          release_name: Releasev1.2
+          release_name: Release ${{vars.STABLEVERSION}}
           body: |
             Changes in this Release
             - First Change
