--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,6 +34,7 @@ jobs:
             Changes in this Release
             - First Change
             - Second Change
+            - Third Change
           draft: false
           prerelease: false
 
