--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,7 @@ jobs:
             - First Change
             - Second Change
             - Third Change
+            - Fourth Change
           draft: false
           prerelease: false
 
