--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,8 +31,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: $VAR1
-          release_name: Release $VAR1
+          tag_name: $stableVersion
+          release_name: Release $stableVersion
           body: |
             Changes in this Release
             - First Change
