--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,9 +22,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@master
+        
       - name: Load variables
         run: |
           source .github/variables.sh
+          
+      - name: Use variables
+        run: |
+          echo $stableVersion
+    
       - name: Create Release
         id: create_release
         uses: actions/create-release@latest
