--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -13,19 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Include variables
-        uses: actions/github-script@v5
-        with:
-          script: |
-            const yaml = require('js-yaml');
-            const fs = require('fs');
-
-            const variables = yaml.load(fs.readFileSync('.github/variables.yml', 'utf8'));
-            Object.keys(variables).forEach(key => {
-              process.env[key] = variables[key];
-            });
-
-      - name: Use variables
+      - name: Load variables
         run: |
-          echo ${{ env.VAR1 }}
-          echo ${{ env.VAR2 }}
+          echo "${{ env.VARIABLES_YAML }}" > .github/variables.yml
+
+      - name: Read variables
+        run: |
+          echo "${{ env.VARIABLES_YAML }}"
+          echo "${{ fromYaml(env.VARIABLES_YAML).VAR1 }}"
+          echo "${{ fromYaml(env.VARIABLES_YAML).VAR2 }}"
