--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -17,9 +17,10 @@ jobs:
       - name: Load variables
         id: load-variables
         run: |
-          echo "::set-output name=variables::$(cat .github/variables.yml | jq -r tostring)"
+          echo "VAR1=$(cat .github/variables.yml | jq -r '.VAR1')" >> $GITHUB_ENV
+          echo "VAR2=$(cat .github/variables.yml | jq -r '.VAR2')" >> $GITHUB_ENV
 
       - name: Read variables
         run: |
-          echo "${{ steps.load-variables.outputs.variables }}" | jq -r '.VAR1'
-          echo "${{ steps.load-variables.outputs.variables }}" | jq -r '.VAR2'
+          echo $VAR1
+          echo $VAR2
