--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -19,3 +19,18 @@ jobs:
           stableVersion=$(grep "stableVersion:" .github/variables.yml | awk -F ": " '{print $2}')
          
           echo $stableVersion
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: $stableVersion
+          release_name: Release $stableVersion
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+            - Third Change
+          draft: false
+          prerelease: false
