--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -17,8 +17,9 @@ jobs:
       - name: Read variables
         run: |
           stableVersion=$(grep "stableVersion:" .github/variables.yml | awk -F ": " '{print $2}')
-         
-          echo $stableVersion
+          echo "::set-env name=stableVersion"
+        
+          
       - name: Create Release
         id: create_release
         uses: actions/create-release@latest
