--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Read variables
         run: |
           stableVersion=$(grep "stableVersion:" .github/variables.yml | awk -F ": " '{print $2}')
-          echo $stableVersion >> $GITHUB_ENV
+          echo "stableVersion=$stableVersion" >> $GITHUB_ENV
         
           
       - name: Create Release
@@ -26,8 +26,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: $stableVersion
-          release_name: Release $stableVersion
+          tag_name: ${{ env.stableVersion }}
+          release_name: Release ${{ env.stableVersion }}
           body: |
             Changes in this Release
             - First Change
