--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions: write-all
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
