--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -13,6 +13,8 @@ jobs:
     if: |
       github.event.pull_request.merged == true &&
       github.event.pull_request.base.ref == 'main'
+      
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
