--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -4,14 +4,15 @@ name: Example Workflow
 on:
  
   pull_request:
-    branches: [ "main" ]
+    branches: [ "QA" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions: write-all
     if: |
-      github.event.pull_request.merged == true 
+      github.event.pull_request.merged == true &&
+      github.event.pull_request.base.ref == 'main'
      
       
     steps:
