--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -5,9 +5,6 @@ on:
   pull_request:
     types:
       - closed
-  push:
-    branches:
-      - main
 
 jobs:
   build:
@@ -30,7 +27,7 @@ jobs:
       - name: Get Tags
         id: get_tags
         run: |
-          tags=$(git ls-remote --tags --refs main | awk '{print $2}' | awk -F/ '{print $NF}')
+          tags=$(git ls-remote --tags --refs origin | awk '{print $2}' | awk -F/ '{print $NF}')
           echo "::set-output name=tags::$tags"
           
       - name: Run build
@@ -40,9 +37,7 @@ jobs:
           
       - name: Create Release   
         run: |
-          # Add your build commands here
-          echo "Running build task..."
-          # Replace the line above with your actual build command(s)
+          
           id: create_release
           uses: actions/create-release@latest
           env:
