--- a/.github/workflows/includevariables.yml
+++ b/.github/workflows/includevariables.yml
@@ -29,10 +29,11 @@ jobs:
         run: |
           tags=$(git ls-remote --tags --refs origin | awk '{print $2}' | awk -F/ '{print $NF}')
           echo "tags=$tags" >> $GITHUB_ENV
+          echo "$tags"
       
       - name: Compare Tags
         run: |
-          tags=$GITHUB_ENV_TAGS
+          tags=$GITHUB_ENV
           existing_tag= ${{ env.stableVersion }}  # Replace with your existing tag
           if [[ $tags =~ (^|[[:space:]])$existing_tag($|[[:space:]]) ]]; then
             echo "Tag $existing_tag exists!"
